tests/script/negative/adt/unknown_type.s
@initial
run(t arg) {
  terminate();
}
